--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,20 +5,19 @@ author: Rik Bellens <rik.bellens@appsup.be>
 homepage: https://github.com/appsup-dart/openid_client
 
 environment:
-  sdk: '>=1.21.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  jose: ^0.1.2
-  pointycastle: ^1.0.0-rc4
-  http: ^0.12.0
-  logging: ^0.11.3+2
-  args: ^1.5.0
+  jose: ^0.2.1+1
+  http: ^0.12.2
+  logging: ^0.11.4
+  args: ^1.6.0
 
 dev_dependencies:
-  test: ^1.0.0
-  angular: ^5.0.0
-  build_runner: ">=0.8.10 <0.11.0"
-  build_web_compilers: ">=0.3.6 <0.5.0"
+  test: ^1.15.7
+  angular: ^6.0.1
+  build_runner: ^1.10.13
+  build_web_compilers: ^2.11.0
 
 executables:
   openid_client: openid_client
